# auto-vibe-coding

./: .gitignore  FLYWHEEL.md  METHODOLOGY.md  README.md  pyproject.toml
agents/: fixer.md  hunter.md  performance.md  referee.md  security.md  skeptic.md
configs/: flywheel-config.yaml.example
docs/: 01-OVERVIEW.md  02-ARCHITECTURE.md  03-AGENTS.md  04-VERIFICATION.md  05-BEST-PRACTICES.md  06-REFERENCE-PROJECTS.md  07-IMPLEMENTATION.md
examples/: demo-session.md
references/: PAPERS.md
scripts/: init.sh  run-flywheel.sh
skills/: flywheel.md  self-test.md  verify-sandbox.md
skills/flywheel/: SKILL.md
skills/self-test/: SKILL.md
skills/verify-sandbox/: SKILL.md
src/: __init__.py
src/agents/: __init__.py  architect.py  base.py  dev.py  fixer.py  qa.py  scout.py  verifier.py
src/core/: flywheel.py
